# so101_data_collection

./: README.md
install/: local_setup.sh  setup.sh
install/robot_bringup/share/robot_bringup/: local_setup.sh  package.sh
install/robot_controller/share/robot_controller/: package.sh  package.xml
install/robot_description/share/robot_description/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: physical_robot.launch.py  simulated_robot.launch.py
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/config/: ur5_controllers.yaml
src/robot_controller/launch/: controller.launch.py
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: display.launch.py
src/robot_description/so-101/: hw_so101.urdf  so101.gazebo.xacro  so101.urdf  so101.urdf.xacro
src/robot_description/urdf/: ur5.gazebo.xacro  ur5.urdf.xacro  ur5_ros2_control.xacro
src/robot_moveit/: CMakeLists.txt
src/robot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ur5.srdf
src/robot_moveit/launch/: so101_moveit.launch.py  ur5_moveit.launch.py
src/robot_moveit/so101_config/: initial_positions.yaml  moveit_controllers.yaml
src/robot_moveit/ur5_config/: kinematics.yaml  ur5.srdf
src/robot_msgs/: CMakeLists.txt
src/robot_utils/: CMakeLists.txt
src/robot_utils/robot_utils/: angle_conversion.py
src/so101_firmware/: CMakeLists.txt
(+132 files in other folders)
